Issue #76 fixed
Issue fixed:

You should still look into spacing menu items with padding/margin
instead of line-height. Having fixed lib-height of 60px is making
drop-down menu very hard to read.

--- a/style.css
+++ b/style.css
@@ -401,8 +401,8 @@ nav .navigation li {
 
 nav .navigation li a {
   /* height: 60px; */
-  line-height: 60px;
-  padding: 0 35px;
+  /* line-height: 60px; */
+  padding: 21px 35px;
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   -o-transition: all 0.3s;
